test/runnable/shortcircuittest.nt
module shortcircuittest;

macro import std.macro.assert;

void main() {
    {
        mut int a, b;
        set(&a, 1) && set(&b, 1);
        assert(a == 1); assert(b == 1);
    }
    {
        mut int a, b;
        set(&a, 0) && set(&b, 1);
        assert(a == 1); assert(b == 0);
    }
    {
        mut int a, b;
        set(&a, 0) && set(&b, 0);
        assert(a == 1); assert(b == 0);
    }
    {
        mut int a, b;
        set(&a, 1) || set(&b, 1);
        assert(a == 1); assert(b == 0);
    }
    {
        mut int a, b;
        set(&a, 0) || set(&b, 1);
        assert(a == 1); assert(b == 1);
    }
    {
        mut int a, b;
        set(&a, 0) || set(&b, 0);
        assert(a == 1); assert(b == 1);
    }
}

int set(int* ip, int i)
{
    *ip = 1;
    return i;
}
