test/fail_compilation/class_private_member.nt
module class_private_member;

class A {
    this() { }
    private int i;
}

void main() {
    A a = new A;
    int i = a.i;
}
